--- a/www/index.html
+++ b/www/index.html
@@ -2,30 +2,23 @@
 <html lang="en" dir="ltr">
 <head>
   <script data-ionic="inject">
-    (function(w){var i=w.Ionic=w.Ionic||{};i.version='3.2.1';i.angular='4.1.0';i.staticDir='build/';})(window);
+    (function(w){var i=w.Ionic=w.Ionic||{};i.version='^3.7.1';i.angular='^4.4.3';i.staticDir='build/';})(window);
   </script>
   <meta charset="UTF-8">
   <title>AED Locations</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
   <meta name="format-detection" content="telephone=no">
   <meta name="msapplication-tap-highlight" content="no">
   <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#4e8ef7">
   <script src="cordova.js"></script>
-  <!-- un-comment this code to enable service worker
-  <script>
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('service-worker.js')
-        .then(() => console.log('service worker installed'))
-        .catch(err => console.error('Error', err));
-    }
-  </script>-->
   <link href="build/main.css" rel="stylesheet">
 </head>
 <body>
   <ion-app></ion-app>
   <script src="build/polyfills.js"></script>
+  <script src="build/vendor.js"></script>
   <script src="build/main.js"></script>
 </body>
 </html>
